{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 23,
  "lineage": "724d14de-0f12-b0f8-30e6-f65972a5db2d",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-091e00976c975e571",
            "domain": "vpc",
            "id": "eipalloc-091e00976c975e571",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-7-27-21.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.7.27.21",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "DEV",
              "Name": "vpc-dev-ap-south-1a",
              "Onwer": "Kumar"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "vpc-dev-ap-south-1a",
              "Onwer": "Kumar"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:819764431183:internet-gateway/igw-0172c6ed77ea79844",
            "id": "igw-0172c6ed77ea79844",
            "owner_id": "819764431183",
            "tags": {
              "Environment": "DEV",
              "Name": "vpc-dev",
              "Onwer": "Kumar"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "vpc-dev",
              "Onwer": "Kumar"
            },
            "vpc_id": "vpc-0c86a0e0036c3a0e0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-091e00976c975e571",
            "connectivity_type": "public",
            "id": "nat-0c7959ac3f79ce3d8",
            "network_interface_id": "eni-08d0b22d2e7f66a72",
            "private_ip": "10.230.0.8",
            "public_ip": "3.7.27.21",
            "subnet_id": "subnet-0342dff18fe745bbb",
            "tags": {
              "Environment": "DEV",
              "Name": "vpc-dev-ap-south-1a",
              "Onwer": "Kumar"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "vpc-dev-ap-south-1a",
              "Onwer": "Kumar"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04d67710c1c9d57511080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c7959ac3f79ce3d8",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04d67710c1c9d5751",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0172c6ed77ea79844",
            "id": "r-rtb-0cbb401268e96be231080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cbb401268e96be23",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:819764431183:route-table/rtb-0a4737e6ed6237fa0",
            "id": "rtb-0a4737e6ed6237fa0",
            "owner_id": "819764431183",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "DEV",
              "Name": "vpc-dev-db",
              "Onwer": "Kumar"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "vpc-dev-db",
              "Onwer": "Kumar"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c86a0e0036c3a0e0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:819764431183:route-table/rtb-04d67710c1c9d5751",
            "id": "rtb-04d67710c1c9d5751",
            "owner_id": "819764431183",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "DEV",
              "Name": "vpc-dev-private",
              "Onwer": "Kumar"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "vpc-dev-private",
              "Onwer": "Kumar"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c86a0e0036c3a0e0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:819764431183:route-table/rtb-0cbb401268e96be23",
            "id": "rtb-0cbb401268e96be23",
            "owner_id": "819764431183",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "DEV",
              "Name": "vpc-dev-public",
              "Onwer": "Kumar"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "vpc-dev-public",
              "Onwer": "Kumar"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c86a0e0036c3a0e0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c75e98aa51d611b3",
            "route_table_id": "rtb-0a4737e6ed6237fa0",
            "subnet_id": "subnet-02820983115b14daa"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-003851b8a3e422744",
            "route_table_id": "rtb-0a4737e6ed6237fa0",
            "subnet_id": "subnet-0fbb82d6e379e9eed"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08737e0c1078e6e8f",
            "route_table_id": "rtb-04d67710c1c9d5751",
            "subnet_id": "subnet-0eb320f4059be1cef"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08663f6ae32be9907",
            "route_table_id": "rtb-04d67710c1c9d5751",
            "subnet_id": "subnet-02c47710f3ae3f470"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b43c70f146e5e588",
            "route_table_id": "rtb-0cbb401268e96be23",
            "subnet_id": "subnet-0342dff18fe745bbb"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ff9999f2ea3cda4",
            "route_table_id": "rtb-0cbb401268e96be23",
            "subnet_id": "subnet-0805c77064d010f00"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:819764431183:subnet/subnet-02820983115b14daa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.230.0.64/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02820983115b14daa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "819764431183",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "DEV",
              "Name": "vpc-dev-db-ap-south-1a",
              "Onwer": "Kumar",
              "Type": "database-subnets"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "vpc-dev-db-ap-south-1a",
              "Onwer": "Kumar",
              "Type": "database-subnets"
            },
            "vpc_id": "vpc-0c86a0e0036c3a0e0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:819764431183:subnet/subnet-0fbb82d6e379e9eed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.230.0.80/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fbb82d6e379e9eed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "819764431183",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "DEV",
              "Name": "vpc-dev-db-ap-south-1b",
              "Onwer": "Kumar",
              "Type": "database-subnets"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "vpc-dev-db-ap-south-1b",
              "Onwer": "Kumar",
              "Type": "database-subnets"
            },
            "vpc_id": "vpc-0c86a0e0036c3a0e0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:819764431183:subnet/subnet-0eb320f4059be1cef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.230.0.16/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eb320f4059be1cef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "819764431183",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "DEV",
              "Name": "vpc-dev-private-ap-south-1a",
              "Onwer": "Kumar",
              "Type": "private-subnets"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "vpc-dev-private-ap-south-1a",
              "Onwer": "Kumar",
              "Type": "private-subnets"
            },
            "vpc_id": "vpc-0c86a0e0036c3a0e0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:819764431183:subnet/subnet-02c47710f3ae3f470",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.230.0.48/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c47710f3ae3f470",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "819764431183",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "DEV",
              "Name": "vpc-dev-private-ap-south-1b",
              "Onwer": "Kumar",
              "Type": "private-subnets"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "vpc-dev-private-ap-south-1b",
              "Onwer": "Kumar",
              "Type": "private-subnets"
            },
            "vpc_id": "vpc-0c86a0e0036c3a0e0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:819764431183:subnet/subnet-0342dff18fe745bbb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.230.0.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0342dff18fe745bbb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "819764431183",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "DEV",
              "Name": "vpc-dev-public-ap-south-1a",
              "Onwer": "Kumar",
              "Type": "public-subnets"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "vpc-dev-public-ap-south-1a",
              "Onwer": "Kumar",
              "Type": "public-subnets"
            },
            "vpc_id": "vpc-0c86a0e0036c3a0e0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:819764431183:subnet/subnet-0805c77064d010f00",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.230.0.32/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0805c77064d010f00",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "819764431183",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "DEV",
              "Name": "vpc-dev-public-ap-south-1b",
              "Onwer": "Kumar",
              "Type": "public-subnets"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "vpc-dev-public-ap-south-1b",
              "Onwer": "Kumar",
              "Type": "public-subnets"
            },
            "vpc_id": "vpc-0c86a0e0036c3a0e0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:819764431183:vpc/vpc-0c86a0e0036c3a0e0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.230.0.0/25",
            "default_network_acl_id": "acl-01562f2663efd333f",
            "default_route_table_id": "rtb-058c750ba4d3077ec",
            "default_security_group_id": "sg-01e3f58b214eea8bb",
            "dhcp_options_id": "dopt-06959a26b5df530c5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c86a0e0036c3a0e0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-058c750ba4d3077ec",
            "owner_id": "819764431183",
            "tags": {
              "Environment": "DEV",
              "Name": "DEV_VPC",
              "Onwer": "Kumar"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "DEV_VPC",
              "Onwer": "Kumar"
            }
          }
        }
      ]
    }
  ]
}